--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,3 +9,5 @@ jobs:
     steps:
       - checkout # check out the code in the project directory
       - run: echo "hello world" # run the `echo` command
+      - run: echo "hello Luciano" # run the `echo` command
+
